popup.css
/**
 * Popup box stylesheet
 * MHacks Fall 2014
 *
 * Charlie Su
 * Brian Yang
 */

@font-face{font-family: CODE_LIGHT;
    src: url('fonts/code_light.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

#popup h3 {
	font-family: CODE_LIGHT;
	padding: 0 10px;
}
#popup{
	background: repeating-linear-gradient(45deg, white, white 1.5%, transparent 1.5%, transparent 3%), linear-gradient(#DFDFDF, #FFFFFF);
	z-index: 3;
	top: 5px;
	right: 5px;
	width: 33%;
	position: absolute;
	margin: 15px;
	height: 0; /* Hidden until modified by script */
	overflow-y: scroll;
	overflow-x: hidden;
	-webkit-box-shadow: 0px 0px 15px 0px rgba(50, 50, 50, 0.75);
	box-shadow:         0px 0px 15px 0px rgba(50, 50, 50, 0.75);

}
#popup #result { padding: 10px; }
#popup #result p { margin-top: 0;}

.descriptions {
	margin-bottom: 10px;
	line-height: 1.2em;
}

